--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "type": "module",
   "name": "tobari",
   "version": "1.0.0",
-  "description": "Minecraft is a well-made multiplay game. <3",
-  "main": "app.js",
+  "description": "Minecraft is a well made multiplayer game. <3",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node src/app.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +25,11 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
+    "jose": "^6.0.12",
     "pug": "^3.0.3",
     "qs": "^6.14.0"
+  },
+  "devDependencies": {
+    "jest": "^30.0.5"
   }
 }
