--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '3'
+version: "3.8"
+
 services:
   web:
     build: .
@@ -8,4 +9,20 @@ services:
     image: gateway
     ports:
       - "80:80"
+      - "443:443"
       - "25565:25565"
+    volumes:
+      - letsencrypt:/etc/letsencrypt
+      - certbot:/var/www/certbot
+      - gateway_log:/var/log/nginx
+      - web_log:/tobari/logs
+
+volumes:
+  letsencrypt:
+    external: true
+  certbot:
+    external: true
+  gateway_log:
+    driver: local
+  web_log:
+    driver: local
