--- a/gateway/nginx.sample.conf
+++ b/gateway/nginx.sample.conf
@@ -24,6 +24,22 @@ http {
 
     server {
         listen 80;
+        server_name yourdomain.com www.yourdomain.com;
+
+        location /.well-known/acme-challenge {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name yourdomain.com www.yourdomain.com;
+        ssl_certificate /etc/letsencrypt/live/chabyik.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/chabyik.com/privkey.pem;
 
         location /api/ {
             proxy_pass http://web:8001/;
