--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "http-errors": "^2.0.0",
     "jose": "^6.0.12",
     "pug": "^3.0.3",
-    "qs": "^6.14.0"
+    "qs": "^6.14.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^30.0.5"
